styling company profile page

--- a/partners/templates/account.html
+++ b/partners/templates/account.html
@@ -155,7 +155,10 @@
       <div data-bind='' class='col-sm-8'>
         <h3>Informazioni</h3>
 
-        
+        <table class=''>
+        </table>
+
+        <div data-bind=''></div>
         <form class='fixed-headers'>
           
           <div class="input-group">
