--- a/partners/templates/info.html
+++ b/partners/templates/info.html
@@ -8,36 +8,29 @@
           <li><a class='fa fa-twitter-square'></a></li>
           <li><a class='fa fa-facebook-square'></a></li>
         </ul>
-        <h1>Nome azienda</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-        </p>
+
+        <h1 data-bind='text: profiles.company.first_name()'></h1>
+        <p data-bind='text: profiles.company.background()'></p>
       </div>
-      
     </section>
 
-    <section class='section-info row'>
+    <section class='section-info row' data-bind='visible: tags().length > 0'> 
       <div class='col-sm-3 section-label'>
         <div>Competenze<span></span></div>
       </div>
       <div class='col-sm-9 section-container'>
-        <ul class='info-tag-list'>
-          <li>Python <b class='fa  fa-tag'></b></li>
-          <li>PHP <b class='fa  fa-tag'></b></li>
-          <li>Javascript <b class='fa  fa-tag'></b></li>
-          <li>Dataware <b class='fa  fa-tag'></b></li>
-          <li>Hacking <b class='fa  fa-tag'></b></li>
-          <li>Antani <b class='fa  fa-tag'></b></li>
+        <ul class='info-tag-list' data-bind='foreach: tags()'>
+          <li><span data-bind='text: $data'></span> <b class='fa  fa-tag'></b></li>
         </ul>
       </div>
     </section>
 
-    <section class='section-info row'>
+    <section class='section-info row' data-bind='visible: locations().length > 0'>
       <div class='col-sm-3 section-label'>
         <div>Sedi<span></span></div>
       </div>
-      <div class='col-sm-9 section-container'>
-        <div class='row'>
+      <div class='col-sm-9 section-container' data-bind='foreach: locations()'>
+        <div class='row'> 
           <section class='map-section'>
               <div class='col-sm-6'>
                 <div class='col-sm-1'>
@@ -46,12 +39,17 @@
 
                 <div class='col-sm-10'>
                   <address>
-                    <div data-bind=''><b>Sede Centrale</b></div>
-                    <div class='street-address' data-bind=''>Via Iacopo Nardi, 71</div>
-                    <div class='city' data-bind=''>Firenze</div>
-                    <div class='country' data-bind=''>Italia</div>
-                    <div class='phone' data-bind=''>055 123243</div>
-                    <div class='email' data-bind=''>info@info.it</div>
+                    <div><b data-bind='text:first_name()'></b></div>
+                    <div class='street-address' 
+                         data-bind='text:street()'></div>
+                    <div class='city' 
+                         data-bind='text:city()'></div>
+                    <div class='country' 
+                         data-bind='text: country()'></div>
+                    <div class='phone' 
+                         data-bind='text: phone()'></div>
+                    <div class='email' 
+                         data-bind='text: email()'></div>
                   </address>
                 </div>
               </div>
@@ -62,40 +60,14 @@
               </div>
           </section>
         </div>
-        <div class="row">
-          <section class='map-section'>
-              <div class='col-sm-6'>
-                <div class='col-sm-1'>
-                  <b class='fa fa-map-marker info-map-marker'></b>
-                </div>
-
-                <div class='col-sm-10'>
-                  <address>
-                    <div data-bind=''><b>Sede secondaria</b></div>
-                    <div class='street-address' data-bind=''>Via Iacopo Nardi, 71</div>
-                    <div class='city' data-bind=''>Firenze</div>
-                    <div class='country' data-bind=''>Italia</div>
-                    <div class='phone' data-bind=''>055 123243</div>
-                    <div class='email' data-bind=''>info@info.it</div>
-                  </address>
-                </div>
-              </div>
-
-              <div class='col-sm-6'>
-                <div class='info-map'>
-                </div>
-              </div>
-          </section>
-        </div>
-
       </div>
     </section>
 
-    <section class='section-info row'>
+    <section class='section-info row' data-bind='visible: teachers().length > 0'>
       <div class='col-sm-3 section-label'>
         <div>Docenti<span></span></div>
       </div>
-      <div class='col-sm-9 section-container'>
+      <div class='col-sm-9 section-container' data-bind='foreach: teachers()'>
         <div class="row">
           <section class="teacher-section">
             <div class="col-sm-3">
@@ -104,27 +76,16 @@
               </div>
             </div>
             <div class='col-sm-8'>
-              <b>Mario Lupo</b>
+              <b data-bind='text: first_name() + " " + last_name()'></b>
               <address class='small'>
-                <div class='phone'><b>Tel:</b> 0554567893</div>
-                <div class="email"><b>Email:</b> test@test.it</div>
-              </address>
-
-            </div>
-          </section>
-        </div>
-        <div class="row">
-          <section class="teacher-section">
-            <div class="col-sm-3">
-              <div class='lpic-icon'>
-                LPIC-1
-              </div>
-            </div>
-            <div class='col-sm-8'>
-              <b>Gennaro Luigi</b>
-              <address class='small'>
-                <div class='phone'><b>Tel:</b> 0554567893</div>
-                <div class="email"><b>Email:</b> test@test.it</div>
+                <div class='phone' data-bind='visible: phone().length > 0'>
+                  <b>Tel:</b>
+                  <span data-bind='text: phone()'></span>
+                </div>
+                <div class='email'  data-bind='visible: email().length > 0'>
+                  <b>Email:</b> 
+                  <span data-bind='text: email()'></span>
+                </div>
               </address>
 
             </div>
@@ -133,38 +94,17 @@
       </div>
     </section>
 
-    <section class='section-info row'>
+    <section class='section-info row' data-bind='visible: references().length > 0'>
       <div class='col-sm-3 section-label'>
         <div>Referenze<span></span></div>
       </div>
-      <div class='col-sm-9 section-container'>
+      <div class='col-sm-9 section-container' data-bind='foreach: references()'>
         <div class='row'>
           <section class="reference-section">
             <blockquote class='reference-content'>
               <i class="fa fa-quote-left pull-left"></i>
-              <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. 
-              Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec 
-              consectetur ante hendrerit. Donec et mollis dolor.
-              </p>
-
-              <cite>Caio Semprionio</cite>
-              <i class="fa fa-quote-right pull-right"></i>
-            </blockquote>
-          </section>
-        </div>
-
-        <div class='row'>
-          <section class="reference-section">
-            <blockquote class='reference-content'>
-              <i class="fa fa-quote-left pull-left"></i>
-              <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. 
-              Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec 
-              consectetur ante hendrerit. Donec et mollis dolor.
-              </p>
-
-              <cite>Caio Semprionio</cite>
+              <p data-bind='text: background'></p>
+              <cite data-bind='text: first_name() + " " + last_name()'></cite>
               <i class="fa fa-quote-right pull-right"></i>
             </blockquote>
           </section>
@@ -183,60 +123,49 @@
         <img class='lpi-partnership-logo' 
              src='http://partners.lpi-italia.org/static/images/logo-lpi-big.png'/>
       </div> 
+      <div class='row'>
+      </div>
     </section>
 
-    <section class='box-section'>
-      <section class='person-section'>
+    <section class='box-section' data-bind='visible: profiles.commercial.first_name() != ""'>
+      <section class='person-section' data-bind='with:profiles.commercial'>
         <h4>Commerciale</h4>
         <b class='fa fa-user pull-left'></b>
         <div class='person-data'>
-          <b>Caio Sempronio</b>
+          <b data-bind='text: first_name() + " " + last_name()'></b>
           <address class='small'>
-            <div class='phone'><b>Tel:</b> 055 32173211</div>
-            <div class='email'><b>Email:</b> test@test.it</div>
+            <div class='phone' data-bind='visible: phone().length > 0'>
+              <b>Tel:</b>
+              <span data-bind='text: phone()'></span>
+            </div>
+            <div class='email'  data-bind='visible: email().length > 0'>
+              <b>Email:</b> 
+              <span data-bind='text: email()'></span>
+            </div>
+              
           </address>
         </div>
       </section>
     </section>
 
-    <section class='box-section'>
-      <section class='person-section'>
+    <section class='box-section' data-bind='visible: profiles.incharge.first_name() != ""'>
+      <section class='person-section' data-bind='with: profiles.incharge'>
         <h4>Responsabile</h4>
         <b class='fa fa-user pull-left'></b>
         <div class='person-data'>
           <b>Tizio Caio</b>
           <address class='small'>
-            <div class='phone'><b>Tel:</b> 055 32173211</div>
-            <div class='email'><b>Email:</b> test@test.it</div>
+            <div class='phone' data-bind='visible: phone().length > 0'>
+              <b>Tel:</b>
+              <span data-bind='text: phone()'></span>
+            </div>
+            <div class='email'  data-bind='visible: email().length > 0'>
+              <b>Email:</b> 
+              <span data-bind='text: email()'></span>
+            </div>
           </address>
         </div>
       </section>
     </section>
   </div>
 </div>
-
-<!--
-  <address>
-    <div class='street-address' data-bind='text: profiles.company.street()'></div>
-    <div class='city' data-bind='text: profiles.company.city()'></div>
-    <div class='country' data-bind='text: profiles.company.country()'></div>
-    <div class='phone' data-bind='text: profiles.company.phone()'></div>
-    <div class='email' data-bind='text: profiles.company.email()'></div>
-  </address>
-
-  <div data-bind='visible: profiles.incharge.first_name() != ""'>
-    <h3>Responsabile legale</h3>
-    <b data-bind='text: profiles.incharge.first_name() + " " + profiles.incharge.last_name()'></b>
-  </div>
-
-  <div data-bind='visible: profiles.commercial.first_name() != ""'>
-    <h3>Responsabile commerciale</h3>
-    <b data-bind='text: profiles.commercial.first_name() + " " + profiles.commercial.last_name()'></b>
-  </div>
-</div>
-
-
-<script type='text/html' id='address-form'>
-
-</script>
--->
