--- a/partners/templates/academies.html
+++ b/partners/templates/academies.html
@@ -1,10 +1,12 @@
-<h1>Scuole e Universit&agrave;</h1>
-<p>
-In questa sezione puoi trovare Scuole e Universit&agrave; in grado di erogare corsi certificati LPI: Linux Essentials, LPIC-1, LPIC-2 ed LPIC-3.
-La certificazione professionale LPI è indice di garanzia e competenza nei confronti di clienti e datori di lavoro.
-<br>
-<b>Cerca adesso la sede più vicina a casa tua!</b>
-</p>
+<section class='box-section'>
+  <h1>Scuole e Universit&agrave;</h1>
+  <p>
+  In questa sezione puoi trovare Scuole e Universit&agrave; in grado di erogare corsi certificati LPI: Linux Essentials, LPIC-1, LPIC-2 ed LPIC-3.
+  La certificazione professionale LPI è indice di garanzia e competenza nei confronti di clienti e datori di lavoro.
+  <br>
+  <b>Cerca adesso la sede più vicina a casa tua!</b>
+  </p>
+</section>
 <ul data-bind="foreach: academies">
    <li>
       <img style='max-height:100px;display:none' data-bind='attr: {src: image_url}'>
