--- a/partners/templates/companies.html
+++ b/partners/templates/companies.html
@@ -1,7 +1,9 @@
-<h1>Servizi e Soluzioni</h1>
-<p>
-In questa sezione puoi trovare Aziende e Professionisti in grado di rispondere alle tue esigenze professionali. I nostri partner vengono accuratamente controllati per garantire la massima qualit&agrave; del servizio. Attraverso la funzione di ricerca puoi definire le competenze necessarie, i giudizi di precedenti clienti e l'area di lavoro. In questo modo potrai scegliere tutte le caratteristiche del tuo nuovo fornitore di servizi IT.
-</p>
+<section class='box-section'>
+  <h1>Servizi e Soluzioni</h1>
+  <p>
+  In questa sezione puoi trovare Aziende e Professionisti in grado di rispondere alle tue esigenze professionali. I nostri partner vengono accuratamente controllati per garantire la massima qualit&agrave; del servizio. Attraverso la funzione di ricerca puoi definire le competenze necessarie, i giudizi di precedenti clienti e l'area di lavoro. In questo modo potrai scegliere tutte le caratteristiche del tuo nuovo fornitore di servizi IT.
+  </p>
+</section>
 <div class='list-filters'>
   <fieldset data-bind='visible: cities().length > 0'>
     <h3>Citt&agrave;</h3>
