--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -84,12 +84,14 @@
 
 		<div class='prtn-page-container'>
 			<div class='prtn-page prtn-page-intro' data-bind='css: selected'>
-			  <h1>Partnerships</h1>
-			  <p>
-			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito<br> Linux e FOSS (Free ed Open Source Software).<br /><br>
-          Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere<br> una certificazione professionale in ambito Linux.<br /><br>
-          Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti<br> nella ricerca di consulenti competenti su Linux ed Open Source.
-			  </p>
+        <section class='box-section'>
+  			  <h1>Partnerships</h1>
+  			  <p>
+  			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito<br> Linux e FOSS (Free ed Open Source Software).<br /><br>
+            Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere<br> una certificazione professionale in ambito Linux.<br /><br>
+            Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti<br> nella ricerca di consulenti competenti su Linux ed Open Source.
+  			  </p>
+        </section>
 
   			<section class='prtn-box-container'>
 			 	  <section class='prtn-box col-sm-3 prtn-box-3' data-bind='css: box_left_show'>
