--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -1,10 +1,12 @@
 <div data-bind='visible: type() == "service-company" && show'>
   <div class="row">
-  <h1>Servizi e Soluzioni</h1>
-  <p>
-  In questa sezione puoi trovare i nostri programmi di partnership dedicati alle aziende ed ai professionisti che erogano servizi in ambiente Linux ed Open Source.<br />
-  Attraverso i programmi LPI SP (Solution Provider), LPI CSP (Certified Solution Provider) e LPI CSP (Certified Solution Provider) Gold puoi essere trovato da nuovi clienti in base ai servizi che offri ed alle tue effetive competenze.
-  </p>
+    <section class='box-section'>
+      <h1>Servizi e Soluzioni</h1>
+      <p>
+      In questa sezione puoi trovare i nostri programmi di partnership dedicati alle aziende ed ai professionisti che erogano servizi in ambiente Linux ed Open Source.<br />
+      Attraverso i programmi LPI SP (Solution Provider), LPI CSP (Certified Solution Provider) e LPI CSP (Certified Solution Provider) Gold puoi essere trovato da nuovi clienti in base ai servizi che offri ed alle tue effetive competenze.
+      </p>
+    </section>
   </div>
 
   <div class="row">
