--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -91,7 +91,7 @@
 			  </p>
 
   			<section class='prtn-box-container'>
-			 	  <section class='prtn-box col-sm-3 prtn-box-3' data-bind='css: box_left_show'>
+			 	  <section class='prtn-box col-sm-4' data-bind='css: box_left_show'>
 			 	  	<div class='prtn-box-inner'>
 				 	  	<h3>Formazione</h3>
 				 	  	<div class='prtn-box-icon prtn-box-icon-training'></div>
@@ -105,7 +105,7 @@
 				 	  </div>
 			 	  </section>
 
-			 	  <section class='prtn-box col-sm-3 prtn-box-3' data-bind='css: box_center_show'>
+			 	  <section class='prtn-box col-sm-4' data-bind='css: box_center_show'>
 			 	  	<div class="prtn-box-inner">
 				 	  	<h3>Servizi e Soluzioni</h3>
 				 	  	<div class='prtn-box-icon prtn-box-icon-companies'>
@@ -123,7 +123,7 @@
 				 	  </div>
 			 	  </section>
 
-			 	  <section class='prtn-box col-sm-3 prtn-box-3' data-bind='css: box_right_show'>
+			 	  <section class='prtn-box col-sm-4' data-bind='css: box_right_show'>
 			 	  	<div class="prtn-box-inner">
 				 	  	<h3>Diventa partner</h3>
 				 	  	<div class='prtn-box-icon prtn-box-icon-partner'>
