--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -376,6 +376,7 @@ footer .sitemap a:hover {
 	float:left;
 	opacity:1;
   position:relative;
+  margin-bottom:20px;
 }
 
 .prtn-box-1 {
@@ -749,4 +750,32 @@ input[type="color"]:focus,
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(100,100,100,.6);
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(100,100,100,.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(100,100,100,.6);
+}
+
+
+
+@media (max-width: 768px) {
+  .navbar-nav {
+    display:none;
+  }
+
+  .prtn-container {
+    width:100%;
+  }
+
+  .navbar-lpi-inner {
+    width:100%;
+  }
+
+  .navbar-nav {
+    width:100%;
+  }
+
+  .topbar-wrap {
+    width:100%;
+  }
+
+  .joinus-image {
+    display:none;
+  }
 }
