new listing for all kind of contacts

--- a/partners/templates/academies.html
+++ b/partners/templates/academies.html
@@ -1,3 +1,5 @@
+{% load static from staticfiles %}
+
 <section class='box-section'>
   <h1>Scuole e Universit&agrave;</h1>
   <p>
@@ -7,12 +9,81 @@
   <b>Cerca adesso la sede più vicina a casa tua!</b>
   </p>
 </section>
-<ul data-bind="foreach: academies">
-   <li>
-      <img style='max-height:100px;display:none' data-bind='attr: {src: image_url}'>
-      <a data-bind='text: first_name, attr:{href: "#info/" + id}'></a>
-      <span data-bind='text: "(" + city + ")"'>
-         
-      </span>
-   </li>
-</ul>
+
+
+
+<div class="row">
+  <div class="col-sm-6">
+    <section class='list-filters section-info row' data-bind='visible: cities().length > 0'> 
+        <div class='col-sm-3 section-label'>
+          <div>Citt&agrave;<span></span></div>
+        </div>
+        <div class='col-sm-9 section-container'>
+          <ul data-bind='foreach: cities'>
+            <li data-bind='text: $data, click: function() { $parent.filter($data); },
+                           css: {active:$parent.tag_is_active($data)}'></li>
+
+          </ul>
+        </div>
+    </section>
+  </div>
+
+  <div class="col-sm-6">
+    <section class='list-filters section-info row' data-bind='visible: tags().length > 0'> 
+        <div class='col-sm-3 section-label'>
+          <div>Tag<span></span></div>
+        </div>
+        <div class='col-sm-9 section-container'>
+          <ul data-bind='foreach: tags'>
+            <li data-bind='text: $data, click: function() { $parent.filter($data); },
+                           css: {active:$parent.tag_is_active($data)}'></li>
+
+          </ul>
+        </div>
+    </section>
+  </div>
+</div>
+
+
+
+<div id='companies-isotope' class='isotope' data-bind="foreach: academies">
+
+  <div class='col-sm-4' data-bind='visible: visible()'>
+    <section class='box-section no-padding' >
+      <div class='list-logo-container'>
+        <a data-bind='attr:{href: "#info/" + contact_id}'>
+          <img class='list-logo'
+               data-bind='attr: {src: image_url}, visible: image_url.length > 0'>
+
+          <img class='list-logo' src='{% static "images/tux-gradient.png" %}'
+               data-bind='visible: image_url.length == 0'>
+        </a>
+      </div>
+
+      <div class='row list-info'>
+        <h3><a data-bind='text: contact_name, attr:{href: "#info/" + contact_id}'></a>
+        <div><small data-bind='text: $parent.partner_type($data)'></small></div>
+        </h3>
+
+        <div class='list-icons'>
+          <div class="col-sm-4">
+            <div class='list-icon-count' data-bind='text: references'></div>
+            <div data-toggle="tooltip" data-placement="bottom" title="Referenze" 
+                class='list-icon-image fa fa-users'></div>
+          </div>
+          <div class="col-sm-4" data-bind='visible: true'>
+            <div class='list-icon-count' data-bind='text: teachers'></div>
+            <div data-toggle="tooltip" data-placement="bottom" title="Docenti" 
+                 class='list-icon-image fa fa-user'></div>
+          </div>
+
+          <div class="col-sm-4">  
+            <div class='list-icon-count' data-bind='text: locations'></div>
+            <div data-toggle="tooltip" data-placement="bottom" title="Sedi" 
+                 class='list-icon-image fa fa-map-marker'></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
