--- a/partners/templates/companies.html
+++ b/partners/templates/companies.html
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <section class='list-filters section-info row' data-bind='visible: tags().length > 0'> 
+    <section class='list-filters section-info row' data-bind='visible: cities().length > 0'> 
         <div class='col-sm-3 section-label'>
           <div>Citt&agrave;<span></span></div>
         </div>
