--- a/partners/templates/info.html
+++ b/partners/templates/info.html
@@ -116,8 +116,8 @@
 
   <div class='col-sm-4'>
     <section class='logo-section box-section'>
-      <div class="row">
-        <img src='http://partners.lpi-italia.org/static/images/logo-meta-wp.png'/>
+      <div class="row" data-bind='visible: profiles.company.image_url().length > 0'>
+        <img data-bind='attr: { src: profiles.company.image_url() }'/>
       </div>
       <div class="row">
         <img class='lpi-partnership-logo' 
