--- a/partners/templates/info.html
+++ b/partners/templates/info.html
@@ -117,7 +117,7 @@
   <div class='col-sm-4'>
     <section class='logo-section box-section'>
       <div class="row" data-bind='visible: profiles.company.image_url().length > 0'>
-        <img data-bind='attr: { src: profiles.company.image_url() }'/>
+        <img class='contact-logo' data-bind='attr: { src: profiles.company.image_url() }'/>
       </div>
       <div class="row">
         <img class='lpi-partnership-logo' 
