--- a/partners/templates/training.html
+++ b/partners/templates/training.html
@@ -1,7 +1,7 @@
 {% load static from staticfiles %}
 
 <section class='box-section'>
-  <h1>Formazione</h1>
+  <h1>Formazione: Corsi Linux Certificati</h1>
   <p>
   In questa sezione puoi trovare Aziende ed Agenzie formative in grado di erogare corsi certificati LPI: Linux Essentials, LPIC-1, LPIC-2 ed LPIC-3.<br />
   La certificazione professionale LPI &egrave; indice di garanzia e competenza nei confronti di clienti e datori di lavoro.<br />
