--- a/partners/templates/joinus.html
+++ b/partners/templates/joinus.html
@@ -7,30 +7,63 @@
 
   <div class="row">
   <ul class='prtn-box-container'>
-    <li class='prtn-box col-sm-5'>
+    <li class='prtn-box col-sm-6'>
       <div class='prtn-box-inner'>
-        <h3>Formazione</h3>
+        <h3>Corsi Linux Certificati</h3>
         <div class='prtn-box-icon'></div>
         <div class='prtn-box-desc'>
-        Certifica con LPI i tuoi corsi professionali per Amministratore di Sistema, garantisci qualit&agrave; ai tuoi studenti, renditi visibile attraverso il sito ufficiale del pi&uacute; importante ente di certificazione professionale in ambito Linux al mondo.</div>
-        <div class='prtn-box-button-cont'>
-          <a data-bind='click: show_training' 
-             class="button">maggiori dettagli</a>
+        Certifica con LPI i tuoi corsi professionali per Amministratore di Sistema, garantisci qualit&agrave; ai tuoi studenti, renditi visibile attraverso il sito ufficiale del pi&uacute; importante ente di certificazione professionale in ambito Linux al mondo.
+
+        <br><br>
+
+        <h4>Approved Training Partner (LPI ATP)</h4>
+        <p>
+          Programma di Certificazione Corsi Linux dedicato dedicato ad aziende, agenzie formative, associazione, Pubbliche Amministrazioni, organizzazioni.
+        </p>
+
+        <div class='prtn-box-button-offers'>
+          <a class='button' href='#offers/training-company'>Offerta per le aziende</a >
         </div>
 
-      </div>
+        <h4>Approved Academic Partner (LPI AAP)</h4>
+        <p>
+          Programma di Certificazione Corsi Linux  dedicato dedicato a scuole ed universit&agrave;.
+        </p>
+        
+        <div class='prtn-box-button-offers'>
+          <a class='button'  href="#offers/training-academy">
+            Offerta per le scuole e universit&agrave;
+          </a>
+        </div>
+
+        <h4>Certified Trainer (LPI CT)</h4>
+        <p>
+          Programma  di Certificazione Corsi Linux dedicato dedicato ai professionisti.
+        </p>
+
+        <div class='prtn-box-button-offers'>
+          <a class='button'  href="#offers/personal-teacher">Offerta per professionisti</a>
+        </div>
+       </div>
     </li>
 
-    <li class='prtn-box col-sm-5 col-sm-offset-1'>
+    <li class='prtn-box col-sm-6'>
       <div class='prtn-box-inner'>
         <h3>Servizi e Soluzioni</h3>
         <div class='prtn-box-icon'></div>
         <div class='prtn-box-desc'>
-        Certifica la tua azienda con LPI, garantisci la qualità di Servizi e Soluzioni, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale di LPI.
-        </div>
-        <div class='prtn-box-button-cont'>
-          <a data-bind='click: show_companies' 
-             class="button">maggiori dettagli</a>
+        Certifica la tua azienda con LPI, garantisci la qualità di Servizi e Soluzioni, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale del Linux Professional Institute.
+        <br><br>
+
+        <h4>Offerte per le societ&agrave; di servizi (LPI CSP)</h4>
+        <p>
+          Il programma di certificazione di Servizi e Soluzioni &egrave; dedicata ad aziende e professionisti. Con un controllo da parte del nostro staff e le recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e professionalità a nuovi potenziali clienti.
+        </p>
+           <a href='http://nuovo.lpi-italia.org/faq/'>Domande frequenti</a>
+        <br><br>
+        <div class='prtn-box-button-offers'>
+           <a class='button' href='#offers/service-company'>
+              Offerta Servizi e Soluzioni per aziende</a>
         </div>
       </div>
     </li>
